# Py6Web

./: README.MD  model_osi.md
hw08/: create_db.py  init_db.db  init_db.sql  main.py  pyproject.toml  query.sql  students_202208312143.csv
m01_01/: 01_intro.py  02_metaclass.py  03_new_example.py  04_abstract.py  05_stream.py  06_exec.py  07_eval.py  08_ast.py  example.py
m01_02/: ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py  ex07.py  ex08.py  ex09.py  ex10.py  ex11.py  ex12.py  my_logger.py  what_the_partial.py
m02_01/: Pipfile
m02_02/: facade.py  factory.py  logs.txt  observer.py  singleton.py  singleton_meta.py  singleton_meta_example.py
m03_01/app_poetry_init/: pyproject.toml
m03_01/poetry-demo/: README.rst  app.py  my_scripts.py  pyproject.toml  requirements.txt
m04_01/: 01_thread_as_function.py  02_thread_as_class.py  03_thread_join.py  04_thread_timer.py  05_thread_lock.py  06_event.py  07_event_stop.py  08_event_restart.py  09_condition.py  10_semaphore.py  11_barrier.py  result.txt
m05_01/: 01_process_as_function.py  02_process__as_class.py  03_process__join.py  04_process_lock_value_array.py  05_process_event.py  06_event_stop.py  08_condition.py  09_semaphore_manager.py  10_barrier.py  11_pool.py  12_pool_map.py  13_pipe.py  14_pipe_duplex.py  main.py  result.txt
m06_01/: 01_intro.py  02_fake_db.py  03_fake_db_deep.py  04_forver.py  05_for.py  06_for.py  07_for.py  08_for_gather.py  09_queue.py  10_global.py  Pipfile  main.py  (+1 more)
m09_01/: config.example.ini  config.ini  example01.py  example02.py  main.py  pyproject.toml  reg.py  sqlalchemy_example.db
m09_01/src/: db.py  models.py  repository.py
m09_02/: alembic.ini  main.py  pyproject.toml
m09_02/migration/: env.py
m09_02/migration/versions/: 13f015ab50be_init.py  33826f475fe2_add_ondelete_cascade.py  49c30065db7b_add_table_contactperson.py
m09_02/src/: db.py  models.py  seed.py
m10_01/: create_01.py  create_02.py  delete_01.py  models.py  pyproject.toml  redis_example.py  update_01.py
m10_01/example_pymongo/: get_test.py  main.py  many_ins.py
m10_02/: main.py  pyproject.toml
m10_02/examples/pubsub/: emit_log.py  receive_logs.py
m10_02/examples/simple/: receiver.py  sender.py
m10_02/examples/tasks/: create_task.py  worker.py
m10_02/models/: models.py
m10_02/services/: mail.py  marketing_worker.py
m11_Flask/: .env  app.py  pyproject.toml
m11_Flask/config/: config.py
m11_Flask/data/: app.db.sqlite3
m11_Flask/migrations/versions/: 22f198a3476e_add_model_picture.py  4fa0646d2a53_add_token_to_user.py  6cf5f5fd0f7e_initial_migration.py
m11_Flask/src/: __init__.py  models.py  routes.py
m11_Flask/src/libs/: file_service.py  validation_file.py  validation_schemas.py
m11_Flask/src/repository/: pics.py  users.py
m11_Flask/src/templates/: base.html
m11_Flask/src/templates/pages/: edit.html  index.html  login.html  pictures.html  registration.html  upload.html
m12_01/solution_async/: app.py  pyproject.toml
m12_01/solution_async/config/: app_config.yaml
m12_01/solution_async/migrations/: env.py
m12_01/solution_async/migrations/versions/: 3de7601161ea_init.py
m12_01/solution_async/src/: models.py  routes.py  settings.py  views.py
m12_01/solution_async/src/templates/: detail.html  note.html  tag.html
m12_02_chat/: alembic.ini  main.py  pyproject.toml
m12_02_chat/config/: config.yaml
m12_02_chat/migration/: env.py
m12_02_chat/migration/versions/: f5d27cb25a50_init.py
m12_02_chat/src/: middlewares.py  routes.py  settings.py
m12_02_chat/src/auth/: views.py
m12_02_chat/src/chat/: views.py
m12_02_chat/src/static/css/: style.css
m12_02_chat/src/static/js/: main.js
m12_02_chat/src/store/: accessor.py  models.py
m12_02_chat/src/templates/: 404.html  500.html  base.html  base_chat.html  error.html
m12_02_chat/src/templates/pages/: chat.html  index.html  login.html  signin.html
m15/: main.py  pyproject.toml  requirements.txt
m15/.deta/: prog_info  state
m15/config/: config.yaml
m15/db/: connect.py
m15/migrations/: env.py
m15/migrations/versions/: 17a6c4cb52ac_add_user.py  d77032710fdc_init.py  ec786ae2256e_add_avatar_for_user.py
m15/src/: config.py  models.py
m15/src/libs/: hash.py  oauth2.py
m15/src/middlewares/: process_time.py
m15/src/repository/: notes.py  users.py
m15/src/router/: auth.py  notes.py  users.py
m15/src/schemas/: auth.py  notes.py  users.py
m15/src/tests/: test_notes.py
m15/templates/: list-notes.html
m15/templates/source/: list.js  main.js
(+191 files in other folders)
