[tool.poetry]
name = "m12_02_chat"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.3"
aiohttp-jinja2 = "^1.5"
PyYAML = "^6.0"
gino = "^1.0.1"
alembic = "^1.8.1"
psycopg2 = "^2.9.3"
aiohttp-session = {extras = ["secure"], version = "^2.11.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
