[tool.poetry]
name = "app_poetry"
version = "0.1.0"
description = "Test project"
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
