[tool.poetry]
name = "solution_async"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.3"
PyYAML = "^6.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.41"}
asyncpg = "^0.26.0"
alembic = "^1.8.1"
aiopg = {extras = ["sa"], version = "^1.3.4"}
aiohttp-jinja2 = "^1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
